--- a/RVC.ipynb
+++ b/RVC.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title Google Colab запретил пользовательский интерфейс Gradio для бесплатных пользователей, но вы все равно можете использовать RVC. Обучение пока ТОЛЬКО, скоро добавлю Inference."
@@ -12,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title Установка на Гугл Диск (Для автоматической тренировки и сохранения прогресса.)\n",
@@ -44,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title 1.Препроцесс данных\n",
@@ -74,7 +80,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title 2.Извлечение\n",
@@ -98,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title 3.Тренировка индекса\n",
@@ -193,7 +203,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
     "#@title 4.Тренировка модели\n",
@@ -367,10 +379,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
-    "#@title Либо включаем GUI (Banned for free Colab Notebooks)\n",
+    "#@title Либо включаем GUI (Он забанен для пользователей без подписки)\n",
     "if not 'installed' in locals():\n",
     "    %cd /content/\n",
     "    from google.colab import drive\n",
