--- a/RVC.ipynb
+++ b/RVC.ipynb
@@ -413,7 +413,8 @@
   }
  ],
  "metadata": {
-  "language_info": {
+   "accelerator": "GPU",
+   "language_info": {
    "name": "python"
   },
   "orig_nbformat": 4
