--- a/RVC.ipynb
+++ b/RVC.ipynb
@@ -386,6 +386,7 @@
    "source": [
     "#@title Либо включаем GUI (Он забанен для пользователей без подписки)\n",
     "if not 'installed' in locals():\n",
+    "def inf(msg, style, wdth): inf = widgets.Button(description=msg, disabled=True, button_style=style, layout=widgets.Layout(min_width=wdth));display(inf)/n",
     "    %cd /content/\n",
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
