--- a/RVC.ipynb
+++ b/RVC.ipynb
@@ -35,9 +35,11 @@
     "    print(\"Молодец! Продолжаем.\")\n",
     "with capture.capture_output() as cap:\n",
     "    def inf(msg, style, wdth): inf = widgets.Button(description=msg, disabled=True, button_style=style, layout=widgets.Layout(min_width=wdth));display(inf)\n",
-    "    source = \"Rejekts\"\n",
-    "    !wget https://huggingface.co/{source}/project/resolve/main/project-main.zip -O '/content/project-main.zip' && unzip -n 'project-main.zip' -d /content/drive/MyDrive\n",
-    "    !cd '/content/drive/MyDrive/project-main' && python download_files.py && pip install -r 'requirements-safe.txt'\n",
+    "    !wget https://huggingface.co/NeuroDonu/rvc/resolve/main/project-main.zip \n",
+    "    !unzip -n 'project-main.zip' -d /content/drive/MyDrive\n",
+    "    %cd /content/drive/MyDrive/project-main\n",
+    "    !python download_files.py \n",
+    "    %pip install -r requirements-safe.txt\n",
     "    !rm /content/project-main.zip\n",
     "    !rm -r /content/sample_data\n",
     "    !mkdir -p /content/dataset\n",
@@ -386,7 +388,7 @@
    "source": [
     "#@title Либо включаем GUI (Он забанен для пользователей без подписки)\n",
     "if not 'installed' in locals():\n",
-    "def inf(msg, style, wdth): inf = widgets.Button(description=msg, disabled=True, button_style=style, layout=widgets.Layout(min_width=wdth));display(inf)/n",
+    "def inf(msg, style, wdth): inf = widgets.Button(description=msg, disabled=True, button_style=style, layout=widgets.Layout(min_width=wdth));display(inf)/n\n",
     "    %cd /content/\n",
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
@@ -414,8 +416,8 @@
   }
  ],
  "metadata": {
-   "accelerator": "GPU",
-   "language_info": {
+  "accelerator": "GPU",
+  "language_info": {
    "name": "python"
   },
   "orig_nbformat": 4
