--- a/RVC.ipynb
+++ b/RVC.ipynb
@@ -35,6 +35,7 @@
     "    print(\"Молодец! Продолжаем.\")\n",
     "with capture.capture_output() as cap:\n",
     "    def inf(msg, style, wdth): inf = widgets.Button(description=msg, disabled=True, button_style=style, layout=widgets.Layout(min_width=wdth));display(inf)\n",
+    "    !apt install nvidia-cuda-toolkit nvidia-cuda-toolkit-gcc -y\n",
     "    !wget https://huggingface.co/NeuroDonu/rvc/resolve/main/project-main.zip \n",
     "    !unzip -n 'project-main.zip' -d /content/drive/MyDrive\n",
     "    %cd /content/drive/MyDrive/project-main\n",
@@ -388,7 +389,8 @@
    "source": [
     "#@title Либо включаем GUI (Он забанен для пользователей без подписки)\n",
     "if not 'installed' in locals():\n",
-    "def inf(msg, style, wdth): inf = widgets.Button(description=msg, disabled=True, button_style=style, layout=widgets.Layout(min_width=wdth));display(inf)/n\n",
+    "    def inf(msg, style, wdth): inf = widgets.Button(description=msg, disabled=True, button_style=style, layout=widgets.Layout(min_width=wdth));display(inf)\n",
+    "    !apt install nvidia-cuda-toolkit nvidia-cuda-toolkit-gcc -y\n",
     "    %cd /content/\n",
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
@@ -399,7 +401,7 @@
     "        print(\"Твой диск не смонтирован. Создание фейка.\")\n",
     "        os.makedirs('/content/drive/MyDrive')\n",
     "    if not os.path.exists('/content/drive/MyDrive/project-main'):\n",
-    "        !wget https://huggingface.co/Rejekts/project/resolve/main/project-main.zip -O '/content/project-main.zip' && unzip 'project-main.zip' -d /content/drive/MyDrive\n",
+    "        !wget https://huggingface.co/NeuroDonu/rvc/resolve/main/project-main.zip -O '/content/project-main.zip' && unzip 'project-main.zip' -d /content/drive/MyDrive\n",
     "    !cd '/content/drive/MyDrive/project-main' && python download_files.py && pip install -r 'requirements.txt'\n",
     "    !rm /content/project-main.zip\n",
     "    !rm -r /content/sample_data\n",
@@ -418,7 +420,8 @@
  "metadata": {
   "accelerator": "GPU",
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
